--- a/wineshare/src/main/resources/templates/board/boardGetForm.html
+++ b/wineshare/src/main/resources/templates/board/boardGetForm.html
@@ -92,6 +92,7 @@
 
         }); // ready끝
 
+
         // 댓글페이지 불러오기
         function getBoardReplyList(boardId, replyPage) {
             const token = $("meta[name='_csrf']").attr("content");
@@ -314,14 +315,20 @@
                 </div>
             </div>
 
-<!--            <p th:text="${boardStatus}"></p>-->
-<!--            <p th:text="${boardDTO.id}"></p>-->
 
-            <div th:if="${isAuthor}">
+            <div class="btn-box" th:if="${isAuthor}">
                 <!--                수정 버튼 -->
                 <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}"
-                        type="submit" class="board-modify-btn">수정하기
+                        type="submit" class="board-modify-btn">수정
                 </button>
+            </div>
+            <div class="btn-box" th:unless="${isAuthor}">
+                <div sec:authorize="hasRole('ADMIN')">
+                    <!--                수정 버튼 -->
+                    <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}"
+                            type="submit" class="board-modify-btn">수정
+                    </button>
+                </div>
             </div>
 
 
